# Add rules here to build your software
# See https://docs.bazel.build/versions/main/build-ref.html#BUILD_files

# Allow any ts_library rules in this workspace to reference the config
# Note: if you move the tsconfig.json file to a subdirectory, you can add an alias() here instead
#   so that ts_library rules still use it by default.
#   See https://www.npmjs.com/package/@bazel/typescript#installation
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

exports_files(["tsconfig.json"], visibility = ["//:__subpackages__"])

jasmine_node_test(
    name = "test",
    srcs = ["index.js", "spec.js"],
    deps = ["@npm//c8"],
)

ts_project(
    name = "ts",
    srcs = ["index.ts", "spec.ts"],
    deps = ["@npm//@types/jasmine"],
)

jasmine_node_test(
    name = "test_ts",
    srcs = [":ts"],
    deps = ["@npm//c8"],
)
